Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -190,8 +190,59 @@ For instance, the following commands are run from a Windows 10 dev machine which
 If your VM is set up with a DNS name in Azure, you could also run the same commands against the DNS name in Azure of your VM, like this command.
 
     `PS C:\> $ENV:DOCKER_HOST = 'tcp://windockerhost.westus.cloudapp.azure.com:2375'
-    PS C:\> docker info
+     PS C:\> docker info
     `
+At this point, you could run any “docker-compose” or “docker run” command from your development machine and those commands will be executed against the remote Azure VM.
+
+##### Publish the application .NET bits into a folder
+
+Right click the project in VS 2017 and select publish and Folder. Make sure you select/type the path obj\Docker\publish (case sensitive), and finally click on Publish.
+
+![image](https://user-images.githubusercontent.com/1712635/30407748-f7d7bcfc-98ae-11e7-8301-a987be182611.png)
+
+Navigate to the published folder src\eShopModernizedMVC\obj\Docker\publish and make sure the application bits and the Dockerfile are in that folder.
+
+##### Build the Docker images and deploy the images and containers to the remote Windows Server VM in Azure 
+
+Now, open a command line window (either PowerShell or CMD) and go to the root folder of the application where you see the docker-compose.yml files, like with:
+
+    `cd yourPath\eShopModernizedMVCSolution`
+
+Then, build the custom Docker image and run the application container into the remote Docker Host (Windows Server VM in Azure) with the docker-compose up command, like the following.
+
+    `\> Docker-compose up`
+
+You will see a similar output to the following image.
+
+![image](https://user-images.githubusercontent.com/1712635/30407784-3fc413ee-98af-11e7-84e9-4a76b7cf731d.png)
+
+Note that the first time you run “docker-compose up” it will take quite a few minutes as it will need to download the SQL Server image, from Docker Hub, into the remote Azure VM. This is only needed the first time. 
+
+If you didn’t change the $ENV:DOCKER_HOST environment variable in your console window, then the deployment will be performed in your local development machine (i.e. Windows 10) where you have installed Docker for Windows. But if you changed that environment variable, then the Docker commands are sent to the remote Windows Server 2016 VM in Azure.
+At this point, the .NET application and SQL Server are both running as Windows Containers in the remote VM, as you can check by typing “docker ps” to see the containers and by typing “docker images” to see the registered images in the remote VM, as shown in the following screenshots.
+
+![image](https://user-images.githubusercontent.com/1712635/30407832-abaaba86-98af-11e7-8676-7f16191b6c98.png)
+
+
+![image](https://user-images.githubusercontent.com/1712635/30407870-e7bc6bbe-98af-11e7-90fb-79d9386d68e5.png)
+
+Finally, and provided that you have the Azure NSG rules and the Windows Server Firewall rules allowing the traffic through the TCP port used by the application (in this case the port 5114), you could test the MVC application from any machine in the Internet, like in image X-XX which uses the URL http://windockerhost.westus.cloudapp.azure.com:5114/ but the public IP could also be used like with http://your_VM_IP:5114/ 
+
+![image](https://user-images.githubusercontent.com/1712635/30407887-04be8e68-98b0-11e7-8d0c-7f757826523c.png)
+
+To go back and use a local Docker Server over named pipes in your local development machine, use a command like the following:
+
+`PS C:\> docker --host npipe:////./pipe/docker_engine`
+
+Additional resources 
+- Remote Management of a Windows Docker Host
+    https://docs.microsoft.com/en-us/virtualization/windowscontainers/management/manage_remotehost
+
+
+
+
+
+
 
 ## Deploying from VSTS CD pipeline to Azure VM 
 - TBD (Plain)
