Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -239,10 +239,105 @@ Additional resources
     https://docs.microsoft.com/en-us/virtualization/windowscontainers/management/manage_remotehost
 
 
+### Scenario B: Deploying to Azure VM through a Docker Registry
+
+When deploying to production/staging environments, you would normally deploy the application’s containers from a Continuous Deployment pipeline based on products like VSTS (Visual Studio Team Services) or Jenkins.
+
+However, for simplicity’s sake or for testing and researching reasons, you could also deploy the application directly into the Azure VM itself by using the Docker CLI commands like “docker-compose up”.
+
+In any of those cases, you will first need to push/submit your custom Docker images to a Docker Registry like Docker Hub or Azure Container Registry. Then, from the VM in production you will pull those images from the Docker Registry, register them into the local Docker repository at the VM and then deploy the Windows Containers.
+
+This is the diagram for this scenario:
+![image](https://user-images.githubusercontent.com/1712635/30402804-d62632a2-9893-11e7-817a-f9f616cdf380.png)
+
+#### Build docker images in the local development machine
+
+If you followed the previous steps, you would probably have the docker images created and registered locally. You can check that out by typing “docker images” in your local CMD or PowerShell Window (Make sure it is a new window without the Docker environment variable pointing to the remote VM).
+
+If you don’t have the Docker images already built, you can build them with the following commands.
+
+    `\> cd yourPath\eShopModernizedMVCSolution
+     \> docker-compose build 
+    `
+
+You should see an output similar to the following image.
+![image](https://user-images.githubusercontent.com/1712635/30407969-b918d788-98b0-11e7-916b-b34dc4beb401.png)
+
+And you should see that image registered locally (dev machine) by typing “docker images”.
+![image](https://user-images.githubusercontent.com/1712635/30407982-ceb680b8-98b0-11e7-90f3-d472bf41947b.png)
+
+#### Publish the image in a Docker Registry (Docker Hub of Azure Container Registry)
+
+For this step, you need to have either a Docker Hub account or an Azure Container Registry (ACR) created.
+In this case, we’re going to upload the image to Docker Hub which is a public Docker Registry. Follow the next steps:
+
+1. Login to the Docker Hub. From a Powershell execute ”docker login -u dockerUser -p yourPassword” like in the next image.
+
+    ![image](https://user-images.githubusercontent.com/1712635/30408023-04a947f0-98b1-11e7-9717-62b34d393bc5.png)
+
+2. Publish the image in Docker Hub by executing “`docker push eshop/modernizedmvc`” like in the next image. 
+
+![image](https://user-images.githubusercontent.com/1712635/30408042-24e39b9c-98b1-11e7-97a7-5d47be91635e.png)
+
+3. If you login at the Docker Hub web site, you should see your image registered like in the following image.
+
+![image](https://user-images.githubusercontent.com/1712635/30408054-42458754-98b1-11e7-9780-a42646e0803d.png)
+
+#### Create NSG rules and Windows firewall rules allowing inbound traffic in the Azure VM
+
+If you didn't do it in the previous section (SCENARIO A), you need to do it now.
+
+##### Create NSG rule in Azure
+
+A network security group (NSG) contains a list of security rules that allow or deny network traffic to resources connected to Azure Virtual Networks (VNet). You’ll need to create a rule to allow traffic for remote management of your Windows Docker Host.
+
+Make the HTTP ports used by the applications (like in this case port 5114) available by creating an NSG rule allowing inbound traffic. 
+
+##### Open the HTTP port used by the app in the Windows Firewall at the Windows Server VM
+
+In addition, you need to open the port used by Docker in the Windows Firewall, either by manually creating a rule of by running this PowerShell command:
+
+    `PS C:\> netsh advfirewall firewall add rule name="HTTP eShop ports" dir=in action=allow protocol=TCP localport=5000-5500`
+
+#### Pull the images and run the containers in the remote Windows Server Azure VM
+
+Once you have the image at any accessible Docker Registry it is only a matter of pulling the images into the VM and running the container. Follow the next steps.
+- Use the same Windows Server 2016 that you created in Azure in previous sections.
+- Check the local images and if you have the app image, delete it with “docker rmi image-ID” so you make sure it will pull the image from the remote Docker Hub
+- At the VM, copy the files docker-compose.nobuild.yml, docker-compose.override.yml and .env into a folder (i.e. C:/eShopModernizedMVCDeployment).
+- Edit the .env and set the VM IP or VM DNS name VM in the ESHOP_EXTERNAL_DNS_NAME_OR_IP  variable, like in the following text.
+
+    `#.env file
+     ESHOP_EXTERNAL_DNS_NAME_OR_IP=windockerhost.westus.cloudapp.azure.com
+     `
+- Install docker-compose tool in the VM. By default, the current Windows Server with Window Containers does not have the docker-compose tool. In order to install it, follow the instructions from Docker, [here](https://docs.docker.com/compose/install/#install-compose), which is basically running the following PowerShell command with Admin rights.
+
+    `\> Invoke-WebRequest "https://github.com/docker/compose/releases/download/1.16.1/docker-compose-Windows-x86_64.exe" -UseBasicParsing -OutFile $Env:ProgramFiles\docker\docker-compose.exe`
+
+A good way to install it with no issues with Windows Defender afterwards is by installing it with Chocolatey, just install it - e.g. on a administrative command line with: 
+From CMD admin rights:
+
+    `@powershell -NoProfile -ExecutionPolicy Bypass -Command "iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))" && SET "PATH=%PATH%;%ALLUSERSPROFILE%\chocolatey\bin"`
+
+Now that chocolatey is installed, the only thing that´s left is to fire up an administrative PowerShell and do:
+
+    `\> choco install docker-compose`
+
+- **Run the application by deploying the containers**: Finally, within the folder you created for the app’s files, run the docker-compose command at the VM PowerShell or CMD.
+
+    `docker-compose -f .\docker-compose.nobuild.yml -f .\docker-compose.override.yml up`
+
+You should see a similar execution to the following image.
+
+![image](https://user-images.githubusercontent.com/1712635/30408234-4cc35c50-98b2-11e7-9af4-e961e3f57400.png)
+
+- The first time the images will be downloaded from the registry, so this step can take some minutes if the SQL Server image is still not registered locally in the VM.
+- Finally, open the browser and write http://{ip or DNS name of the VM}:5114 and the app should open, like in the following screenshot.
+
+![image](https://user-images.githubusercontent.com/1712635/30408265-68136194-98b2-11e7-9be8-f39852c9d305.png)
 
 
 
-
-
-## Deploying from VSTS CD pipeline to Azure VM 
+## Deploying from VSTS CD pipeline to an Azure VM using the Docker Tasks in VSTS
+- TBD - Using Visual Studio Team Services Docker tasks deploying to the Docker hosts. 
 - TBD (Plain)
