Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -338,6 +338,10 @@ You should see a similar execution to the following image.
 
 
 
-## Deploying from VSTS CD pipeline to an Azure VM using the Docker Tasks in VSTS
+### Scenario C: Deploying from VSTS CD pipeline to an Azure VM using the Docker Tasks in VSTS
 - TBD - Using Visual Studio Team Services Docker tasks deploying to the Docker hosts. 
+
+![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
+
 - TBD (Plain)
+
