Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -1,14 +1,14 @@
 # Deploying eShopModernizedMVC to Kubernetes
 
 ## Overview
-This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
- 
-Deploying to Kubernetes from scratch a 2-step process:
-- Deploy a K8s cluster
-- Deploy the application and related resources
+Applications based on Windows Containers will soon need to use platforms going further from IaaS VMs in order to easily achieve a better automated scalability, high scalability and significant improvement in automated deployments and versioning. You can achieve those goals with the orchestrator Kubernetes, available in Azure Container Services.
 
 ##  Goals for this walkthrough
-TBD
+This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
+ 
+Deploying to Kubernetes (K8s) from scratch a 2-step process:
+- Deploy a K8s cluster
+- Deploy the application and related resources into the K8s cluster
 
 ##  Scenario
 TBD
