Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -11,7 +11,8 @@ Deploying to Kubernetes (K8s) from scratch a 2-step process:
 - Deploy the application and related resources into the K8s cluster
 
 ##  Scenario
-TBD
+
+![image](https://user-images.githubusercontent.com/1712635/30443383-264dd546-9934-11e7-8c86-6d0c892927bb.png)
 
 ## Prerequisites
 - Azure Subscription
