--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -10,9 +10,14 @@ Deploying to Kubernetes (K8s) from scratch a 2-step process:
 - Deploy a K8s cluster
 - Deploy the application and related resources into the K8s cluster
 
-##  Scenario
+##  Scenarios
 
+##  Scenario A: Direct deployment to K8s cluster
 ![image](https://user-images.githubusercontent.com/1712635/30443383-264dd546-9934-11e7-8c86-6d0c892927bb.png)
+
+Scenario B: Deployment to K8s cluster from CI/CD pipelines in VSTS
+
+TBD
 
 ## Prerequisites
 - Azure Subscription
