Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -12,10 +12,10 @@ Deploying to Kubernetes (K8s) from scratch a 2-step process:
 
 ##  Scenarios
 
-##  Scenario A: Direct deployment to K8s cluster
+### Scenario A: Direct deployment to K8s cluster
 ![image](https://user-images.githubusercontent.com/1712635/30443383-264dd546-9934-11e7-8c86-6d0c892927bb.png)
 
-Scenario B: Deployment to K8s cluster from CI/CD pipelines in VSTS
+### Scenario B: Deployment to K8s cluster from CI/CD pipelines in VSTS
 
 TBD
 
