Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -6,8 +6,8 @@ Applications based on Windows Containers will soon need to use platforms going f
 ##  Goals for this walkthrough
 This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
  
-Deploying to Kubernetes (K8s) from scratch a 2-step process:
-- Deploy a K8s cluster
+Deploying to Kubernetes (K8s), from scratch, is a 2-step process:
+- Deploy a K8s cluster in Azure Container Service (Azure) or any other environment.
 - Deploy the application and related resources into the K8s cluster
 
 ##  Scenarios
