--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -22,6 +22,7 @@ TBD
 ## Prerequisites
 - Azure Subscription
 - Azure CLI installed on dev machine (explained below)
+- Kubernetes Kubectl
 - Access to eShopModernizedMVC image at Docker Hub (or any other Docker Registry)
 
 ## Position PowerShell into the eShopModernizedMVC-K8s\ServiceDeployments folder
