Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -1,14 +1,31 @@
 ##  Overview
-In this walkthrough, TBD
+Applications based on Windows Containers will soon need to use platforms going further from IaaS VMs in order to easily achieve a better automated scalability, high scalability and significant improvement in automated deployments and versioning. You can achieve those goals with the orchestrator Azure Service Fabric, available in Microsoft Azure cloud but also on-premises or even in any other public cloud you’d like to deploy it.
 
 ##  Goals for this walkthrough
-TBD
+This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
+
+Learn how to deploy a Windows Container based application into a Service Fabric cluster in Azure. Deploying to Service Fabric, from scratch, requires a 2-step process:
+1. Deploy a Service Fabric cluster into Azure (Or any other environment)
+2. Deploy the application and related resources into the Service Fabric cluster
+
 
 ##  Scenario
+
+### Scenario A: Direct deployment to Service Fabric cluster from development environment
+![image](https://user-images.githubusercontent.com/1712635/30446445-094e998a-993e-11e7-96d8-ed1dd9fef142.png)
+
+### Scenario B: Deployment to to Service Fabric cluster from from CI/CD pipelines in VSTS
+
 TBD
 
+
 ## Prerequisites
-- TBD
+- Azure Subscription
+- Visual Studio 2017 (Recommended and needed for this specific walkthorugh)
+- Service Fabric SDK
+- Access to eShopModernizedMVC image at Docker Hub (or any other Docker Registry)
+
+
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
