Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -21,8 +21,8 @@ TBD
 
 ## Prerequisites
 - Azure Subscription
-- Visual Studio 2017 (Recommended and needed for this specific walkthorugh)
-- Service Fabric SDK
+- Visual Studio 2017 on dev machine (Recommended and needed for this specific walkthorugh)
+- Service Fabric SDK on dev machine
 - Access to eShopModernizedMVC image at Docker Hub (or any other Docker Registry)
 
 
