Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -10,6 +10,10 @@ Deploying to Kubernetes (K8s), from scratch, is a 2-step process:
 - Deploy a K8s cluster in Azure Container Service (Azure) or any other environment.
 - Deploy the application and related resources into the K8s cluster
 
+However, before trying this scenario deploying to an orchestrator, it is recommended that you:
+1. Familiarize yourself with the previous sections about containerizing existing .NET Framework apps.
+2. You’ve been testing the sample applications (eShopModernizedMVC and/or eShopModernizedWebForms) and running them on a local Docker for Windows dev machine.
+
 ##  Scenarios
 
 ### Scenario A: Direct deployment to K8s cluster from dev environment
