Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -8,6 +8,9 @@ Learn how to deploy a Windows Container based application into a Service Fabric 
 1. Deploy a Service Fabric cluster into Azure (Or any other environment)
 2. Deploy the application and related resources into the Service Fabric cluster
 
+However, before trying this scenario deploying to an orchestrator, it is recommended that you:
+1. Familiarize yourself with the previous sections about containerizing existing .NET Framework apps.
+2. You’ve been testing the sample applications (eShopModernizedMVC and/or eShopModernizedWebForms) and running them on a local Docker for Windows dev machine.
 
 ##  Scenario
 
@@ -20,12 +23,15 @@ TBD
 
 
 ## Prerequisites
-- Azure Subscription
+- Have ready an Azure subscription
+- Have ready an Azure subscription and a Visual Studio Team Services account (Optional, if deploying from VSTS CD pipeline)
 - Visual Studio 2017 on dev machine (Recommended and needed for this specific walkthorugh)
-- Service Fabric SDK on dev machine
-- Access to eShopModernizedMVC image at Docker Hub (or any other Docker Registry)
-
-
+- Access to eShopModernizedMVC image at [Docker Hub](https://hub.docker.com/) (or any other Docker Registry like Azure Container Registry)
+- Install Docker CE for Windows so that you can run containers on Windows 10 (dev machine).
+- Install Azure PowerShell
+- [Service Fabric Tools](https://blogs.msdn.microsoft.com/azureservicefabric/2017/03/17/visual-studio-2017-and-service-fabric-tools/) are part of the “Azure Development and Management” [workload](https://www.visualstudio.com/vs/visual-studio-workloads/) in Visual Studio 2017. Enable this workload as part of your Visual Studio installation.
+- Install Microsoft [Azure Service Fabric SDK](http://www.microsoft.com/web/handlers/webpi.ashx?command=getinstallerredirect&appid=MicrosoftAzure-ServiceFabric-CoreSDK) or higher through the Platform Installer
+- Install the [Continuous Delivery Tools extension](https://aka.ms/cd4vs) for Visual Studio 2017 (Optional. Needed for deployment from CD pipeline from VSTS)
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
