Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -24,7 +24,7 @@ TBD
 
 ## Prerequisites
 - Have ready an Azure subscription
-- Have ready an Azure subscription and a Visual Studio Team Services account (Optional, if deploying from VSTS CD pipeline)
+- Have ready a Visual Studio Team Services account (Optional, if deploying from VSTS CD pipeline)
 - Visual Studio 2017 on dev machine (Recommended and needed for this specific walkthorugh)
 - Access to eShopModernizedMVC image at [Docker Hub](https://hub.docker.com/) (or any other Docker Registry like Azure Container Registry)
 - Install Docker CE for Windows so that you can run containers on Windows 10 (dev machine).
