Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -33,6 +33,24 @@ TBD
 - Install Microsoft [Azure Service Fabric SDK](http://www.microsoft.com/web/handlers/webpi.ashx?command=getinstallerredirect&appid=MicrosoftAzure-ServiceFabric-CoreSDK) or higher through the Platform Installer
 - Install the [Continuous Delivery Tools extension](https://aka.ms/cd4vs) for Visual Studio 2017 (Optional. Needed for deployment from CD pipeline from VSTS)
 
+It is important that you must, in the first place, have tested either the eShopModernizedMVC or eShopModernizedWebForms container in a local Docker for Windows environment so it is now ready to be built and packaged in a Service Fabric application.
+
+## Have the eShopModernizedMVC or eShopModernizedWebForms Docker image ready at any Docker Registry
+
+Once you have the container image built on your machine, you can push it to any container registry (like Docker Hub or Azure Container Registry) so Service Fabric will be able to pull it down and deploy it as a Windows Container.
+
+However, and for simplicity's sake, you can also use the public eShopModernizedMVC Docker image available at Docker Hub and published by our team. That image is available here:
+eShopModernizedMVC Windows Docker Image: https://hub.docker.com/r/eshop/modernizedmvc/
+eShopModernizedWebForms Windows Docker Image: https://hub.docker.com/r/eshop/modernizedwebforms/
+
+So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these image names:
+eshop/modernizedmvc
+eshop/modernizewebforms
+
+
+
+
+
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
 
