--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -39,13 +39,17 @@ It is important that you must, in the first place, have tested either the eShopM
 
 Once you have the container image built on your machine, you can push it to any container registry (like Docker Hub or Azure Container Registry) so Service Fabric will be able to pull it down and deploy it as a Windows Container.
 
-However, and for simplicity's sake, you can also use the public eShopModernizedMVC Docker image available at Docker Hub and published by our team. That image is available here:
-eShopModernizedMVC Windows Docker Image: https://hub.docker.com/r/eshop/modernizedmvc/
-eShopModernizedWebForms Windows Docker Image: https://hub.docker.com/r/eshop/modernizedwebforms/
+However, and for simplicity's sake, you can also use the public eShopModernized Docker images available at Docker Hub and published by our team. Those images are available here:
+
+    `eShopModernizedMVC Windows Docker Image: https://hub.docker.com/r/eshop/modernizedmvc/ `
+
+    `eShopModernizedWebForms Windows Docker Image: https://hub.docker.com/r/eshop/modernizedwebforms/ `
 
 So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these image names:
-eshop/modernizedmvc
-eshop/modernizewebforms
+
+    `eshop/modernizedmvc`
+
+    `eshop/modernizewebforms`
 
 
 
