Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -41,9 +41,9 @@ Once you have the container image built on your machine, you can push it to any 
 
 However, and for simplicity's sake, you can also use the public eShopModernized Docker images available at Docker Hub and published by our team. Those images are available here:
 
-    `eShopModernizedMVC Windows Docker Image: https://hub.docker.com/r/eshop/modernizedmvc/ `
+    **eShopModernizedMVC Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
 
-    `eShopModernizedWebForms Windows Docker Image: https://hub.docker.com/r/eshop/modernizedwebforms/ `
+    **eShopModernizedWebForms Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
 
 So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these image names:
 
