Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -40,7 +40,7 @@ It is important that you must, in the first place, have tested either the eShopM
 Once you have the container image built on your machine, you can push it to any container registry (like Docker Hub or Azure Container Registry) so Service Fabric will be able to pull it down and deploy it as a Windows Container.
 If you want to publish your own images, follow a similar procedure than this one used in the "Deployment to VMs" post: [Publish the image in a Docker Registry](https://github.com/dotnet-architecture/eShopModernizing/wiki/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD)#publish-the-image-in-a-docker-registry-docker-hub-of-azure-container-registry).
 
-However, and for simplicity's sake, you can also use the public eShopModernized Docker images available at Docker Hub and published by our team. Those images are available here:
+However, and for simplicity's sake, you can also use the, already published, public eShopModernized Docker images available at Docker Hub and published by our team. Those images are available here:
 
 **eShopModernizedMVC Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
 
