Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -52,6 +52,37 @@ So, you'd be able to deploy those images by simply using the current dockerfiles
 
     `eshop/modernizewebforms`
 
+## Creating the Service Fabric cluster in Azure
+
+A [Service Fabric cluster](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-deploy-anywhere) is a network-connected set of virtual or physical machines into which your containers or processes are deployed and managed.
+
+You can create a Service Fabric cluster through several ways:
+1. [Create the SF cluster by using the Azure portal](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster)
+2. [Create a secure SF cluster on Azure using PowerShell](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps)
+3. [Create a secure SF cluster by using Azure Resource Manager](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm)
+
+For production environments it is recommended to create secure clusters based on Certificate keys and probably, running pre-configured PowerShell scripts might be the faster way to do it.
+
+For this initial walkthrough, we're going to use the Azure portal and create an Unsecure cluster with no certificates, so it is faster to get started. However, it is highly recommended to create a secure cluster for production workloads, though, since anyone can anonymously connect to an unsecure cluster and perform management operations.
+
+### Create the cluster
+
+First, log in to the Azure portal at http://portal.azure.com with your subscription credentials.
+If you don't have an Azure subscription, create a [free Azure account](https://azure.microsoft.com/free/?WT.mc_id=A261C142F) before you begin.
+
+1. Click the **New** button found on the upper left-hand corner of the Azure portal.
+2. Select **Compute** from the **New** blade and then **type "Service Fabric" in the Search** edit-box and hit enter. Then select **Service Fabric Cluster** from the blade, as shown below:
+
+![image](https://user-images.githubusercontent.com/1712635/30459069-36dfec12-9963-11e7-8d5e-b32529ab9826.png)
+
+3. Fill out the Service Fabric **Basics** form. For **Operating system**, select "**Windows Server 2016 Datacenter with Containers**" The user name and password entered here is used to log in to the virtual machine. For **Resource group**, create a new one. A resource group is a logical container into which Azure resources are created and collectively managed. When complete, click OK. 
+See screenshot below as reference.
+![image](https://user-images.githubusercontent.com/1712635/30459153-c24dfa8c-9963-11e7-92ec-95b151d12c73.png)
+
+
+
+
+
 
 
 
