Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -76,12 +76,27 @@ If you don't have an Azure subscription, create a [free Azure account](https://a
 ![image](https://user-images.githubusercontent.com/1712635/30459069-36dfec12-9963-11e7-8d5e-b32529ab9826.png)
 
 3. Fill out the Service Fabric **Basics** form. For **Operating system**, select "**Windows Server 2016 Datacenter with Containers**" The user name and password entered here is used to log in to the virtual machine. For **Resource group**, create a new one. A resource group is a logical container into which Azure resources are created and collectively managed. When complete, click OK. 
+
 See screenshot below as reference.
 ![image](https://user-images.githubusercontent.com/1712635/30459153-c24dfa8c-9963-11e7-92ec-95b151d12c73.png)
 
+4. Fill out the **Cluster configuration** form. For **Node type count**, enter "1".
+![image](https://user-images.githubusercontent.com/1712635/30459334-e1b02412-9964-11e7-8bf1-a14b39f66e07.png)
 
+5. Select **Node type 1 (Primary)** and fill out the **Node type configuration** form. Enter a node type name (like "noded1v2" which is based on the type of the VM to be selected)  and set the [Durability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-durability-characteristics-of-the-cluster) to "**Bronze**." Select a VM size.
 
+Node types define the VM size, number of VMs, custom endpoints, and other settings for the VMs of that type. Each node type defined is set up as a separate virtual machine scale set, which is used to deploy and managed virtual machines as a set. Each node type can be scaled up or down independently, have different sets of ports open, and can have different capacity metrics. The first, or primary, node type is where Service Fabric system services are hosted and must have five or more VMs.
 
+For any production deployment, [capacity planning](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity) is an important step. For this quick start, however, you aren't running applications so select a D1_V2 Standard VM size. Select "Silver" for the [reliability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-reliability-characteristics-of-the-cluster) and an initial virtual machine scale set **capacity of 5** VMs.
+
+Custom endpoints open up ports in the Azure load balancer so that you can connect with applications running on the cluster. It is IMPORTANT that you enter at least the ports to be used by the eShopModernized applications.
+
+The list below are ports used by eShopModernizing apps and also other ports used by eShopOnContainers, if you want to deploy multiple applications in the same SF cluster:
+
+    5114, 5433, 80, 81, 82, 83, 84, 85, 88, 8080, 8888, 1433, 443, 5100, 5101, 5102, 5103, 5104, 5105, 5106, 5107, 5108, 5109, 5110, 5112, 5113, 5115, 15672, 5672, 6379 
+
+If you forget any port, you can always download the Azure ARM metadata from your cluster and re-publish.
+An additional good way not to need so many ports is to manage a PREFIX per application so you re-use the same port across multiple services and discriminate services based on that PREFIX by using the SF **REVERSE PROXY**.
 
 
 
