Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -98,7 +98,22 @@ The list below are ports used by eShopModernizing apps and also other ports used
 If you forget any port, you can always download the Azure ARM metadata from your cluster and re-publish.
 An additional good way not to need so many ports is to manage a PREFIX per application so you re-use the same port across multiple services and discriminate services based on that PREFIX by using the SF **REVERSE PROXY**.
 
+Do **not** check the **Configure advanced settings** box, which is used for customizing TCP/HTTP management endpoints, application port ranges, [placement constraints](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-resource-manager-configure-services#placement-constraints), and [capacity properties](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-resource-manager-metrics).
 
+Select OK (just once).
+
+See image below as a reference:
+![image](https://user-images.githubusercontent.com/1712635/30460079-70fe03a6-9969-11e7-87d8-a68904885927.png)
+
+6. Click on the link "**Show optional settings**" in the Cluster configuration form. Then, make sure **Diagnostics** is set to **On**. 
+In "Add on features" select "Include DNS service" and "Include repair manager".
+In **Fabric version**, select **Automatic** upgrade mode so that Microsoft automatically updates the version of the fabric code running the cluster. Set the mode to Manual if you want to choose a supported version to upgrade to.
+You do not need to enter any "fabric setting properties", though.
+
+See image below for reference:
+![image](https://user-images.githubusercontent.com/1712635/30460282-bdab5d88-996a-11e7-8e9c-553c62b1cf4c.png)
+
+Select **OK**.
 
 
 
